fix search result alignment

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -371,7 +371,7 @@ body {
   z-index: 4;
   background-color: white;
   border: 1px solid #ccc;
-  left: 167px;
+  left: 147px;
   top: 39px;
   width: 260px;
   border-radius: 0 0 10px 10px;
